SERVER-6198 disallow dotted field names in $group