jstests/aggregation/bugs/server6198.js
@@ -1,0 +1,4 @@
+db.server6198.drop();
+
+agg = db.server6198.aggregate({$group:{_id:null, "bar.baz": {$addToSet: "$foo"}}});
+assert.eq(agg.code, 16414);
